--- a/OPSI/control
+++ b/OPSI/control
@@ -9,7 +9,7 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming
 advice: 
-version: 2.2.2
+version: 2.2.3
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -64,6 +64,10 @@ description: Wether an icon is set on the desktop or not
 default: False
 
 [Changelog]
+dfn_vlc (2.2.3-1)
+	* neue Upstreamversion
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 03.05.2016
+
 dfn_vlc (2.2.2-1)
 	* minor Update
 	* Set $InstFile$  = "vlc-" + $ProductVersion$ + "-win" + ...
@@ -84,6 +88,7 @@ vlc (2.1.5-1) stable; urgency=low
   * Initial version
 
  -- Eric Esser <esser@wzb.eu> Tue, 10 Feb 2015 15:14:08 + 0100
+
 
 
 
