--- a/OPSI/control
+++ b/OPSI/control
@@ -9,7 +9,7 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming
 advice: 
-version: 2.2.5.1
+version: 2.2.6
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -64,6 +64,11 @@ description: Wether an icon is set on the desktop or not
 default: False
 
 [Changelog]
+dfn_vlc (2.2.6-1)
+	* neue Upstreamversion
+	* Upstream-Checksummen hinzugefügt
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 29.05.2017
+
 dfn_vlc (2.2.5.1-1)
 	* neue Upstreamversion
 	* o4i-Logo repariert
