--- a/OPSI/control
+++ b/OPSI/control
@@ -9,7 +9,7 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming
 advice: 
-version: 2.2.6
+version: 2.2.8
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -60,68 +60,54 @@ default: ["none"]
 [ProductProperty]
 type: bool
 name: desktopicon
-description: Wether an icon is set on the desktop or not
+description: Whether an icon is set on the desktop or not
 default: False
 
 [Changelog]
-dfn_vlc (2.2.6-1)
-	* neue Upstreamversion
-	* Upstream-Checksummen hinzugefügt
- -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 29.05.2017
+dfn_vlc (2.2.8-1) stable; urgency=low
+  * Exe getauscht, Update auf 2.2.8
+  * Icon-Switch eingebaut
 
-dfn_vlc (2.2.5.1-1)
-	* neue Upstreamversion
-	* o4i-Logo repariert
+ -- Eric Esser <eric.esser@wzb.eu>  Tue, 05 Dec 2017 12:39:59 +0000
+
+dfn_vlc (2.2.6-1) stable; urgency=low
+
+  * neue Upstreamversion
+  * Upstream-Checksummen hinzugefuegt
+
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>  Mon, 29 May 2017 12:39:59 +0000
+
+dfn_vlc (2.2.5.1-1) stable; urgency=low
+  * neue Upstreamversion
+  * o4i-Logo repariert
  -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 15.05.2017
 
-dfn_vlc (2.2.4-006)
-	* minor Update
+dfn_vlc (2.2.4-006) stable; urgency=low
+  * minor Update
  -- Detlef Krummel (GEI) <krummel@gei.de>, 05.06.2016
 
-dfn_vlc (2.2.3-005)
-	* minor Update
-	* o4i Icon
+dfn_vlc (2.2.3-005) stable; urgency=low
+  * minor Update
+  * o4i Icon
  -- Detlef Krummel (GEI) <krummel@gei.de>, 09.02.2016
 
-dfn_vlc (2.2.2-004)
-	* minor Update
-	* Set $InstFile$  = "vlc-" + $ProductVersion$ + "-win" + ...
+dfn_vlc (2.2.2-004) stable; urgency=low
+  * minor Update
+  * Set $InstFile$  = "vlc-" + $ProductVersion$ + "-win" + ...
  -- Detlef Krummel (GEI) <krummel@gei.de>, 09.02.2016
 
-dfn_vlc (2.2.1-3)
-	* login.opsiscript added (https://github.com/opsi4instituts/dfn_vlc/issues/4)
-	* install_architecture added (32 or 64 bit installable)
+dfn_vlc (2.2.1-3) stable; urgency=low
+  * login.opsiscript added (https://github.com/opsi4instituts/dfn_vlc/issues/4)
+  * install_architecture added (32 or 64 bit installable)
  -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 12.01.2016
 
-dfn_vlc (2.2.1-2)
-	* custom directory added
-	* Desktopicon configurable
- -- Eric Esser <esser@wzb.eu>, 01.11.2015
+dfn_vlc (2.2.1-2) stable; urgency=low
+      > 	* custom directory added
+      > 	* Desktopicon configurable
+      >  -- Eric Esser <esser@wzb.eu>, 01.11.2015
 
-vlc (2.1.5-1) stable; urgency=low
+dfn_vlc (2.1.5-1) stable; urgency=low
 
   * Initial version
 
- -- Eric Esser <esser@wzb.eu> Tue, 10 Feb 2015 15:14:08 + 0100
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ -- Eric Esser <esser@wzb.eu>  Tue, 10 Feb 2015 15:14:08 + 0100
