--- a/OPSI/control
+++ b/OPSI/control
@@ -9,7 +9,7 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming
 advice: 
-version: 2.2.8
+version: 3.0.0
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -64,6 +64,12 @@ description: Whether an icon is set on the desktop or not
 default: False
 
 [Changelog]
+dfn_vlc (3.0.0-1) stable; urgency=low
+  * neue Upstreamversion
+  * alte uib Copyrights (Überbleibsel von opsi-template) entfernt
+  * Icon-Switch nach common.opsiinc verschoben, damit auch uninstall.opsiscript sie nutzt
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 12.02.2018
+
 dfn_vlc (2.2.8-1) stable; urgency=low
   * Exe getauscht, Update auf 2.2.8
   * Icon-Switch eingebaut
