--- a/OPSI/control
+++ b/OPSI/control
@@ -1,14 +1,15 @@
 [Package]
-version: 2
+version: 1
 depends: 
+incremental: False
 
 [Product]
 type: localboot
 id: dfn_vlc
 name: VLC media player
-description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming
+description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming ||  Media player for video and audio, CD, DVD and streaming
 advice: 
-version: 3.0.3
+version: 3.0.4
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -63,6 +64,12 @@ description: Link on Desktop?
 default: False
 
 [Changelog]
+dfn_vlc (3.0.4-1) stable; urgency=low
+
+  * neue Upstreamversion.
+
+ -- Eric Esser <eric.esser@wzb.eu>  Tue, 04 Sep 2018 17:38:52 +0000
+
 dfn_vlc (3.0.3-2) stable; urgency=low
   * Fix für $RegBitScope$
  -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 26.04.2018
