--- a/OPSI/control
+++ b/OPSI/control
@@ -1,7 +1,6 @@
 [Package]
-version: 2
+version: 3
 depends: 
-incremental: False
 
 [Product]
 type: localboot
@@ -9,7 +8,6 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming ||  Media player for video and audio, CD, DVD and streaming
 advice: 
-
 version: 3.0.4
 priority: 0
 licenseRequired: False
@@ -65,6 +63,10 @@ description: Link on Desktop?
 default: False
 
 [Changelog]
+dfn_vlc (3.0.4-3) stable; urgency=low
+  * neues o4i-Logo
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 19.12.2018
+
 dfn_vlc (3.0.4-2) stable; urgency=low
 
 General uninstaller added.
