--- a/OPSI/control
+++ b/OPSI/control
@@ -8,7 +8,7 @@ id: dfn_vlc
 name: VLC media player
 description: Medienabspieler für diverse Audio- und Videocodecs, Dateiformate sowie auch DVD, Video-CD und Streaming [Media player for video and audio, CD, DVD and streaming]
 advice: 
-version: 3.0.5
+version: 3.0.6
 priority: 0
 licenseRequired: False
 productClasses: 
@@ -63,6 +63,10 @@ description: Link on Desktop?
 default: False
 
 [Changelog]
+dfn_vlc (3.0.6-1) stable; urgency=low
+  * neue Upstreamversion
+ -- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 11.01.2019
+
 dfn_vlc (3.0.5-1) stable; urgency=low
   * neue Upstreamversion
   * englische Beschreibung in []
